tuning User.html FIXED: Now admin can logout ADDED: Nice Progressbar, representing your remaining onlinetime.
git-svn-id: https://svn.berlios.de/svnroot/repos/yacy/trunk@1727 6c8d7289-2bf4-0310-a012-ef5d649a1542